# t2play

./: .gitignore  README.md  conf.c  conf.h  config.yaml  main.c  mem.c  meson.build  panel.h  plugin-battery.c  plugin-clock.c  plugin-kbdlayout.c  plugin-sni.c  plugin-startmenu.c  plugin-taskbar.c  pool.c  string-helpers.c  string-helpers.h  t2play.1.scd  util.c  widget.c
.github/workflows/: build.yml
doc/: config.yaml
include/: array.h  conf.h  desktop-entry.h  mem.h  panel.h
include/common/: box.h  hex.h  log.h  string-helpers.h
p/: ext-foreign-toplevel-list-v1.xml  ext-image-capture-source-v1.xml  ext-image-copy-capture-v1.xml
src/: conf.c  desktop-entry.c  main.c  mem.c  meson.build  plugin-battery.c  plugin-clock.c  plugin-kbdlayout.c  plugin-startmenu.c  plugin-taskbar.c  plugin-thumbnail.c  pool.c  thumbnail.c  widget.c
src/common/: box.c  hex.c  log.c  mem.c  meson.build  string-helpers.c  util.c
